--- a/packages/senchacon-theme/sass/var/Component.scss
+++ b/packages/senchacon-theme/sass/var/Component.scss
@@ -8,3 +8,19 @@ $grid-row-cell-border-width: 0;
 $grid-row-cell-selected-border-width: 0;
 $grid-row-cell-focus-border-width: 0;
 $grid-row-cell-focus-color : #fff;
+
+$tab-base-color: $base-color;
+$tab-base-color-over: $base-color;
+$tab-base-color-active : $base-color;
+$tab-color: lighten($base-color, 40%);
+$tab-color-over: #fff;
+$tab-color-active: #fff;
+$tab-color-focus: $base-color;
+$tab-color-focus-over: $base-color;
+$tab-color-focus-active: #fff;
+$tab-border-width: 0;
+$tab-border-width-active: 0;
+$tab-border-width-focus: 0;
+$tab-border-width-focus-active: 0;
+$tab-border-width-over: 0;  
+
