--- a/packages/senchacon-theme/sass/var/Component.scss
+++ b/packages/senchacon-theme/sass/var/Component.scss
@@ -17,10 +17,5 @@ $tab-color-over: #fff;
 $tab-color-active: #fff;
 $tab-color-focus: $base-color;
 $tab-color-focus-over: $base-color;
-$tab-color-focus-active: #fff;
-$tab-border-width: 0;
-$tab-border-width-active: 0;
-$tab-border-width-focus: 0;
-$tab-border-width-focus-active: 0;
-$tab-border-width-over: 0;  
-
+$tab-color-focus-active: #fff;  
+$tabbar-border-color: $green;
