--- a/senchacon/sass/src/Application.scss
+++ b/senchacon/sass/src/Application.scss
@@ -1,10 +1,22 @@
+@mixin blocks($bg) {
+    background: $bg;
+    border: 1px solid $lightblue;
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
+    display: block;
+    height: 34px;
+    padding: 4px;
+}
+
 .daybar {
   @include blocks($grey);
   position: relative;
   overflow: hidden;
   
   > span {
-    @include blocks($green);
+    @include blocks(darken($grey, 20%));
 
     &.design { background: $green; }
     &.develop { background: $lightblue; }
