--- a/packages/playstation/sass/src/Component.scss
+++ b/packages/playstation/sass/src/Component.scss
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'sarilight';
+    src: url('fonts/sari-light-webfont.eot');
+    src: url('fonts/sari-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/sari-light-webfont.woff2') format('woff2'),
+         url('fonts/sari-light-webfont.woff') format('woff'),
+         url('fonts/sari-light-webfont.ttf') format('truetype'),
+         url('fonts/sari-light-webfont.svg#sarilight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @import 'compass/css3/filter';
 
 @mixin cssfilter($filter-type,$filter-amount) { 
@@ -11,23 +23,23 @@
 @-webkit-keyframes play {
    0% { 
    	@include filter(blur(0)); 
-   	@include cssfilter(invert, 0%);
+   	@include cssfilter(hue-rotate, 0deg);
    }
    10% { 
    	@include filter(blur(0)); 
-   	@include cssfilter(invert, 0%);
+   	@include cssfilter(hue-rotate, 0deg);
    }
    50% { 
    	@include filter(blur(30px)); 
-   	@include cssfilter(invert, 40%);
+   	@include cssfilter(hue-rotate, 90deg);
    }
    90% { 
    	@include filter(blur(0)); 
-   	@include cssfilter(invert, 0%);
+   	@include cssfilter(hue-rotate, 0deg);
    }
    100% { 
    	@include filter(blur(0)); 
-   	@include cssfilter(invert, 0%);
+   	@include cssfilter(hue-rotate, 0deg);
    } 
 }
 
@@ -44,6 +56,11 @@
 	width: 100%;
 }
 
+body {
+	font-family: 'sarilight';
+	text-transform: uppercase;
+}
+
 .x-body {
 	background: url('bg_psn2.jpg') transparent 50% 50%;
 	background-position: fixed;
@@ -57,10 +74,51 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 	@include filter(blur(0));
 }
 
-/* gamesslider */
+/*toolbar*/
+.x-toolbar {
+	color: #fff;
+	font-size: 18px;
 
+	.trophies,
+	.bronze,
+	.silver,
+	.gold,
+	.platinum {
+		font-family: 'Helvetica';
+		//font-weight: bold;
+	}
+
+    padding: 0 25px;
+
+	&:after {
+	    content: "";
+	    height: 2px;
+		background: linear-gradient(to right,  rgba(0,0,0,0) 0%, #fff 50%,rgba(0,0,0,0) 100%);
+
+		display: block;
+		margin-top: 20px;
+	}
+
+}
+
+/* gamesslider */
 .gamesliderroot {
+	
+	padding: 30px 0 0;
+	top: 20px;
+
 	.game {
+			margin: 30px 1px 1px;
+			&:after, &:before {
+			    content: "";
+			    height: 3px;
+				background: linear-gradient(to right,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 50%,rgba(0,0,0,0) 100%);
+
+				display: block;
+				margin-bottom: -1px;
+				margin-top: -5px;
+			}
+
 		img{
 			background: #000;
 			border: 1px solid #000;
@@ -72,9 +130,6 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 			left: 0;
 			z-index: 1;
 		}
-
-		margin: 30px 1px 0;
-
 		.extra {
 			background: #000;
 			color: #fff;
@@ -95,6 +150,10 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 				li {
 					display: inline-block;
 					padding: 8px 5px;
+				}
+
+				.trophies {
+					font-family: 'Helvetica';
 				}
 			}
 		}
