--- a/packages/playstation/sass/src/Component.scss
+++ b/packages/playstation/sass/src/Component.scss
@@ -46,6 +46,11 @@
 /* reset background */
 .x-body:before { 
 	background: url('bg_psn2.jpg') transparent 50% 50%;
+	background-attachment: fixed;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: 100%;
+
 	content: "";
 	-webkit-animation: play 12s steps(600) infinite;
 	animation: play 12s steps(600) infinite;
@@ -62,8 +67,6 @@ body {
 }
 
 .x-body {
-	background: url('bg_psn2.jpg') transparent 50% 50%;
-	background-position: fixed;
 	position: fixed;
 }
 
@@ -72,6 +75,20 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 .x-toolbar-default {
 	background-color: transparent;
 	@include filter(blur(0));
+}
+
+.x-dashboard-googlerss-detail {
+	text-transform: initial;
+	line-height: 22px;
+	padding: 0 10px 10px 10px;
+
+	h2 {
+		color: $glow;
+		font-size: 18px;
+	}
+}
+.x-dashboard-googlerss-glyph {
+	font-size: 14px;
 }
 
 /*toolbar*/
@@ -99,16 +116,47 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 		margin-top: 20px;
 	}
 
+	.total {
+
+	}
+
+	span.bronze, span.silver, span.gold, span.platinum {
+		padding-left: 25px;
+		height: 21px;
+		display: inline-block;
+		line-height: 25px;
+		background-position: 100% 0;
+		font-weight: bold;
+		font-size: 15px;
+	}	
+
+	span.bronze {
+		background: url('bronze.png') no-repeat;
+	}
+	span.silver {
+		background: url('silver.png') no-repeat;
+	}
+	span.gold {
+		background: url('gold.png') no-repeat;
+	}
+	span.platinum {
+		background: url('platinum.png') no-repeat;
+	}
+
 }
 
 /* gamesslider */
 .gamesliderroot {
 	
+	position: absolute;
+	top: 0;
+	left: 0;
+
 	padding: 30px 0 0;
 	top: 20px;
 
 	.game {
-			margin: 30px 1px 1px;
+			margin: 30px 1px 20px;
 			&:after, &:before {
 			    content: "";
 			    height: 3px;
@@ -120,7 +168,7 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 			}
 
 		img{
-			background: #000;
+			background: lighten(#000, 10%);
 			border: 1px solid #000;
 		}
 
@@ -130,33 +178,6 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 			left: 0;
 			z-index: 1;
 		}
-		.extra {
-			background: #000;
-			color: #fff;
-
-			ul,
-			span.progress,
-			span.platformslider {
-				display: block;
-				padding: 8px;
-				border-bottom: 1px solid $glow;
-			}
-
-			ul {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-
-				li {
-					display: inline-block;
-					padding: 8px 5px;
-				}
-
-				.trophies {
-					font-family: 'Helvetica';
-				}
-			}
-		}
 	}
 
 	.game.x-view-item-focused {
@@ -164,9 +185,72 @@ body.x-border-layout-ct, div.x-border-layout-ct,
 
 		img {
 			border: 1px solid #fff;
-			-webkit-box-shadow: -2px 4px 28px 5px $glow;
-			-moz-box-shadow: -2px 4px 28px 5px $glow;
-			box-shadow: -2px 4px 28px 5px $glow;
+			-webkit-box-shadow: -1px 2px 28px 5px $glow;
+			-moz-box-shadow: -1px 2px 28px 5px $glow;
+			box-shadow: -1px 2px 28px 5px $glow;
+		}
+	}
+}
+#extra {
+
+	border: 1px solid #000;
+	-webkit-box-shadow: -1px 5px 28px 5px darken($glow, 50%);
+	-moz-box-shadow: -1px 5px 28px 5px darken($glow, 50%);
+	box-shadow: -1px 5px 28px 5px darken($glow, 50%);
+
+	background: rgba(15,63,107,1);
+	background: -moz-linear-gradient(top, rgba(15,63,107,1) 0%, rgba(15,15,15,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(15,63,107,1)), color-stop(100%, rgba(15,15,15,1)));
+	background: -webkit-linear-gradient(top, rgba(15,63,107,1) 0%, rgba(15,15,15,1) 100%);
+	background: -o-linear-gradient(top, rgba(15,63,107,1) 0%, rgba(15,15,15,1) 100%);
+	background: -ms-linear-gradient(top, rgba(15,63,107,1) 0%, rgba(15,15,15,1) 100%);
+	background: linear-gradient(to bottom, rgba(15,63,107,1) 0%, rgba(15,15,15,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f3f6b', endColorstr='#0f0f0f', GradientType=0 );
+
+	color: #fff;
+	margin: 0;
+
+
+	&.x-item-disabled {
+		display: none;
+	}
+
+	ul,
+	span.progress,
+	span.platformslider {
+		display: block;
+		padding: 8px;
+		border-bottom: 1px solid darken($glow, 10%);
+		font-size: 12px;
+	}
+
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 2px 10px;
+
+		li {
+			display: inline-block;
+			padding: 15px 21px;
+			height: 38px;
+
+			&.bronze {
+				background: url('bronze.png') 0 50% no-repeat;
+			}
+			&.silver {
+				background: url('silver.png') 0 50% no-repeat;
+			}
+			&.gold {
+				background: url('gold.png') 0 50% no-repeat;
+			}
+			&.platinum {
+				background: url('platinum.png') 0 50% no-repeat;
+			}
+
+		}
+
+		.trophies {
+			font-family: 'Helvetica';
 		}
 	}
 }
